--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de tela</title>
     <style>
         body {
             height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size:cover;
+            background-attachment: fixed;*/
+
+            /*  Shorthand - Background
+                color > image > position > repeat > size > attachement
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +38,15 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nisi recusandae ipsam consequuntur eligendi vitae ipsa, nostrum molestias nobis non? Eius at deserunt esse beatae quisquam. Maxime suscipit et odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora quia ducimus! Expedita, hic quaerat odio laboriosam maiores cumque. Blanditiis nam molestias nemo cum provident placeat quia optio harum nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum aspernatur ea illum maiores laborum dolorem mollitia. Consequatur minus obcaecati necessitatibus, similique quaerat vitae, minima nostrum tempora dolorem quis illum eaque.</p>
+
     </main>
 </body>
 </html>
